--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,9 @@
 /*   
  * Template Name: Orbit - Responsive Resume/CV Template for Developers
- * Version: 1.0
- * Author: Xiaoying Riley
- * Twitter: @3rdwave_themes
- * License: Creative Commons Attribution 3.0 License
- * Website: http://themes.3rdwavemedia.com/
+ * Version: 1.3
+ * Author: siamshaeed
+ * Twitter: @siamshaeed
+ * Website: http://siamshaeed.com/
 */
 /* styles.css */
 /* ======= Base ======= */
