--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,9 @@
 /*   
- * Template Name: Orbit - Responsive Resume/CV Template for Developers
- * Version: 1.3
+ * Template Name: siamshaeed - Responsive Resume/CV Template for Developers
+ * Version: 1.5
  * Author: siamshaeed
  * Twitter: @siamshaeed
- * Website: http://siamshaeed.com/
+ * Website: http://siamshaeed.com
 */
 /* styles.css */
 /* ======= Base ======= */
