--- a/assets/css/styles-6.css
+++ b/assets/css/styles-6.css
@@ -1,10 +1,10 @@
 /*   
- * Template Name: Orbit - Responsive Resume/CV Template for Developers
+ * Template Name: Orbit
  * Version: 1.0
  * Author: Xiaoying Riley
  * Twitter: @3rdwave_themes
  * License: Creative Commons Attribution 3.0 License
- * Website: http://themes.3rdwavemedia.com/
+ * Website: http://siamshaeed.com
 */
 /* styles-6.css */
 /* ======= Base ======= */
