--- a/assets/css/styles-2.css
+++ b/assets/css/styles-2.css
@@ -1,8 +1,8 @@
 /*   
- * Template Name: Orbit - Responsive Resume/CV Template for Developers
+ * Template Name: Orbit
  * Version: 1.0
  * Author: Xiaoying Riley
- * Twitter: @3rdwave_themes
+ * Twitter: @siamshaeed
  * License: Creative Commons Attribution 3.0 License
  * Website: http://themes.3rdwavemedia.com/
 */
