--- a/assets/css/styles-4.css
+++ b/assets/css/styles-4.css
@@ -1,7 +1,7 @@
 /*   
  * Template Name: Orbit 
  * Version: 1.0
- * Author: Xiaoying Riley
+ * Author: siamshaeed
  * Twitter: @3rdwave_themes
  * License: Creative Commons Attribution 3.0 License
  * Website: http://themes.3rdwavemedia.com/
