--- a/assets/css/styles-4.css
+++ b/assets/css/styles-4.css
@@ -2,7 +2,7 @@
  * Template Name: Orbit 
  * Version: 1.02
  * Author: siamshaeed
- * Twitter: @3rdwave_themes
+ * Twitter: @siamshaeed
  * License: Creative Commons Attribution 3.0 License
  * Website: http://siamshaeed.com
 */
