--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 /*   
- * Template Name: siamshaeed - Responsive Resume/CV Template for Developers
+ * Template Name: siamshaeed 
  * Version: 1.5
  * Author: siamshaeed
  * Twitter: @siamshaeed
