--- a/assets/css/styles-2.css
+++ b/assets/css/styles-2.css
@@ -1,7 +1,7 @@
 /*   
- * Template Name: Orbit
+ * Template Name: siamshaeed
  * Version: 1.0
- * Author: Xiaoying Riley
+ * Author: siamshaeed
  * Twitter: @siamshaeed
  * Website: http://themes.3rdwavemedia.com/
 */
