--- a/assets/css/styles-2.css
+++ b/assets/css/styles-2.css
@@ -3,7 +3,7 @@
  * Version: 1.0
  * Author: siamshaeed
  * Twitter: @siamshaeed
- * Website: http://themes.3rdwavemedia.com/
+ * Website: http://siamshaeed.com/
 */
 /* styles-2.css */
 /* ======= Base ======= */
