--- a/assets/css/styles-3.css
+++ b/assets/css/styles-3.css
@@ -1,5 +1,5 @@
 /*   
- * Template Name: Orbit - Responsive Resume/CV Template for Developers
+ * Template Name: siamshaeed
  * Version: 1.0
  * Author: Xiaoying Riley
  * Twitter: @3rdwave_themes
