--- a/assets/css/styles-3.css
+++ b/assets/css/styles-3.css
@@ -1,10 +1,10 @@
 /*   
  * Template Name: siamshaeed
  * Version: 1.0
- * Author: Xiaoying Riley
+ * Author: siamshaeed
  * Twitter: @3rdwave_themes
  * License: Creative Commons Attribution 3.0 License
- * Website: http://themes.3rdwavemedia.com/
+ * Website: http://siamshaeed.com
 */
 /* styles-3.css */
 /* ======= Base ======= */
