--- a/assets/css/styles-3.css
+++ b/assets/css/styles-3.css
@@ -3,7 +3,7 @@
  * Version: 1.0
  * Author: siamshaeed
  * Twitter: @3rdwave_themes
- * License: Creative Commons Attribution 3.0 License
+ * License: 1.3
  * Website: http://siamshaeed.com
 */
 /* styles-3.css */
